Add POST application endpoint
