# backend_engineer_interview/models.py
@@ -1,6 +1,7 @@
 import datetime
 
-from sqlalchemy.orm import DeclarativeBase, Mapped, mapped_column
+from sqlalchemy import ForeignKey
+from sqlalchemy.orm import DeclarativeBase, Mapped, mapped_column, relationship
 
 
 class Base(DeclarativeBase):
@@ -19,3 +20,14 @@ class Employee(Base):
     last_name: Mapped[str]
     date_of_birth: Mapped[datetime.date]
     secret: Mapped[str]
+    applications = relationship("Application", back_populates="employee")
+
+
+class Application(Base):
+    __tablename__: str = "application"
+
+    id: Mapped[int] = mapped_column(primary_key=True)
+    leave_start_date: Mapped[datetime.date]
+    leave_end_date: Mapped[datetime.date]
+    employee_id: Mapped[int] = mapped_column(ForeignKey("employee.id"))
+    employee: Mapped["Employee"] = relationship(back_populates="applications")
